2016-01-08 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* add JES 19 NP and 25ns parameters and simple JER parameter to the config file

2016-01-06 David Hohn <david.hohn@cern.ch>
	* migrate to Top,2.3.39
	* enabling tau SFs from AnalysisTop, removing my private implementation
	* fill lep_*_is{Loose,Medium,Tight}
	* use new top::TauMC15, remove ttHMultilepton::TauMC15
	* use 0.91 kfactor for all Sherpa diboson samples

2016-01-06 David Hohn <david.hohn@cern.ch>
	* add config file for running Systematics: tighten object selection to strawman, add skim
	* add systematic variations of btag SF and PU event weights, only stored in nominal Tree
	* working on slimming systematic trees: no truth

2016-01-05 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* bug fix systematic trees: Variables constructor moved outside the systematic loop in ttHMultileptonLooseEventSaver.cxx

2016-01-05 David Hohn <david.hohn@cern.ch>
	* migrate to Top,2.3.37

2016-01-05 David Hohn <david.hohn@cern.ch>
	* tag ttHMultiAna-00-00-04
	* last tag to use Top,2.3.33

2015-12-16 David Hohn <david.hohn@cern.ch>
	* added back 410000 config for PRW and default back to 410000
	* be careful when removing these, I think we need at least one config for each mc campaign

2015-12-09 David Hohn <david.hohn@cern.ch>
	* bug fix for tau counting, EleOLR was backwards
	* addresses ATLASTTHML-32

2015-12-10 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* clean up of empty unused variables: some lep_*, JetBDT* tau, and muons variables not needed anymore
	* include topoetcone/ptvarcone variables for lep_*
	
2015-12-10 Giuseppe Salamanna <salaman AT cern.ch>
	* data: add PURWT confog file for new MC15b 410009
	
2015-12-09 David Hohn <david.hohn@cern.ch>
	* add tau substructure variables, electron LH score if overlapping with tau, empty until available in derivation
	* add flat taus, just one for now but is extensible